resolved not showing linkedin and facebook under 1200px

--- a/src/scss/responsivnes.scss
+++ b/src/scss/responsivnes.scss
@@ -171,6 +171,10 @@
   .left {
     display: none;
   }
+
+  section#fourth-section .sub-header-container {
+    display: flex;
+  }
 }
 
 @media screen and (max-width: 900px) {
